# poetry_testing

./: pyproject.toml
poetry_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
