[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Andres Rivero <andres.r90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pendulum = "^2.1.0"
google-api-python-client = "^1.8.4"
google-auth-httplib2 = "^0.0.3"
google-auth-oauthlib = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.scripts]
my-script = "poetry_demo.quickstart:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

